# DominantFlowFinder

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
include/: CurvatureExtremaFinder.h  CuvatureExtremaFinder.h  Graph.h  ImageCurvatureCalcurator.h  Node.h  PixelNode.h  convert.h  operator.h  struct.h  timer.h  typedef.h  util.h
scripts/: visualize_dumped_cvmat.py
src/: Graph.cpp  PixelNode.cpp  convert.cpp  main.cpp
test/: CMakeLists.txt  test_graph.cpp
